configurando 100% elastic integrado